--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.game.GameActivity"></activity>
+        <activity android:name=".activities.game.GameActivity" />
+        <activity android:name=".activities.score.ScoresActivity"></activity>
     </application>
 
 </manifest>
