--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         </activity>
         <activity
             android:name=".activities.game.GameActivity"
-            android:configChanges="orientation|screenSize"
-            android:noHistory="true" />
+            android:configChanges="orientation|screenSize" />
         <activity
             android:name=".activities.score.ScoresActivity" />
     </application>
