Move game logic out of the presenter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.game.GameActivity"
-            android:configChanges="orientation|screenSize" />
+            android:name=".activities.game.GameActivity" />
         <activity
             android:name=".activities.score.ScoresActivity"
             android:parentActivityName=".activities.main.MainActivity" />
